app/assets/stylesheets/base/layout.css.scss
// * {
//   border: 1px dotted black;
//}

html,body {
  height: auto;
  width: 100%;
  margin: 0;
  padding: 0;
  color: white;
}

.bg-tile {
  background-color: #191919;
}

.center {
  margin: 0 auto;
}

.container {
  height: 700px;
}

#above_chart {
  height: 50px;
  margin: 15px auto;
}

.button-area1 {
  right: 0;
  width: 24%;
}

#main {
  height: 400px;
  display: block;
}

#chart {
  height: 400px;
  width: 90%;
  margin: 0 auto;
  left: 50%;
  border-radius: 2%;
}

#map {
  clear: both;
  height: 400px;
  width: 90%;
  margin: 0 auto;
  left: 50%;
  border-radius: 2%;
}

table {
  margin: 0 auto;
}

.gauges {
  display: block;
  clear: both;
  width: 100%;
  margin: 0 auto;
  padding: 2%;
}
#gauge_1 {
  display: inline-block;
  width: 400px;
}
#gauge_3, #gauge_4 {
  display: inline-block;
  width: 400px;
}

@media (max-width: 1300px) {
  #above_chart {
    height: 35px;
    margin: 10px auto;
  }
}

desc {
  display: none;
  color: #191919;
}

// ----------------------------------------------
// grid

[class*='col-'] {
  float: left;
  padding-right: 20px;
}

[class*='col-']:last-of-type {
  padding-right: 0;
}

.col-2-3 {
  width: 64.66%;
}
.col-1-3 {
  width: 31.33%;
}

.grid:after {
  content: "";
  display: table;
  clear: both;
}

*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.grid-pad {
  padding: 2% 0 2% 2%;
}

.grid-pad > [class*='col-']:last-of-type {
  padding-right: 2%;
}

.col-1-2 {
  width: 48%;
}
.col-1-4 {
  width: 23%;
}
.col-1-8 {
  width: 10.5%;
}

